# GPU-B

./: .gitignore  .qmake.stash  CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  README.md  app.cpp  camera.cpp  camera.pro  camera.ui  main.cpp  mainwindow.ui  project1.pro  ui_camera.h  ui_videosettings.h
debug/: camera.ilk  moc_camera.cpp  moc_imagesettings.cpp  moc_videosettings.cpp  qrc_camera.cpp
guiView/: camera.cpp  camera.h  camera.ui  camera.ui.autosave  imagesettings.cpp  imagesettings.h  imagesettings.ui  main.cpp  videosettings.cpp  videosettings.h
inc/: driver.hpp  logic.hpp  view.hpp
lib/: CMakeLists.txt
release/: Makefile  moc_camera.cpp  moc_imagesettings.cpp  moc_videosettings.cpp  qrc_camera.cpp  ui_camera.h  ui_imagesettings.h
src/: camera.cpp  driver.cpp  imagesettings.cpp  logic.cpp  videosettings.cpp  view.cpp
test/: OpenCVTest.cpp  VideoCapTest  trackerTest  trackerTest.cpp
